--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         class="p-4 bg-black text-white flex items-center justify-between">
         <div class="flex items-center gap-0">
             <!-- <h1 class="text-xl font-semibold mr-0">Moneytto</h1> -->
-            <img src="./src/img/Moneytto_merge.png" alt="Moneytto" class="w-13 h-12">
+            <img src="./static/moneycat_final.png" alt="Moneytto" class="w-13 h-12">
         </div>
         <button id="new-chat-btn" class="bg-white text-gray-700 px-3 py-1 rounded hover:bg-gray-200 transition">+ 새 채팅</button>
     </header>
@@ -30,9 +30,9 @@
             <input type="text" id="user-input"
                 class="flex-1 border border-gray-300 rounded-md p-2 outline-none focus:border-gray-800"
                 placeholder="질문을 입력해주세요." required />
-            <!-- <select id="api-selector" class="border border-gray-300 rounded-md p-2">
+            <select id="api-selector" class="border border-gray-300 rounded-md p-2">
                 <option value="naive" selected>Naive (/chat)</option>
-                <option value="assistant">Assistant (/assistant)</option> -->
+                <option value="assistant">Assistant (/assistant)</option>
             </select>
             <button type="submit" class="bg-black text-white px-4 py-2 rounded-md hover:bg-black transition">
                 보내기
